<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatabaseContentProvider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="username">Input UserName</string>
    <string name="password">Input Password</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登陆</string>
    <string name="sign_out">退出登录</string>
    <string name="UserName">UserName:</string>
    <string name="Password">Password:</string>
    <string name="remenber_password">Remember password</string>

</resources>
